backend: added shape items and drawing items
